# for_streams

./: Cargo.toml  README.md  README.tpl
examples/: example.rs  minimal.rs
impl/: Cargo.toml  README.md
impl/src/: lib.rs
src/: lib.rs
tests/: test.rs
