[package]
name = "for-streams"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"

[dependencies]
futures = "0.3.31"
for-streams-impl = { version = "0.1.0", path = "impl" }
pin-project-lite = "0.2.16"

[dev-dependencies]
futures-util = "0.3.31"
rand = "0.9.2"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
