[package]
name = "for-streams"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"

[lib]
proc-macro = true
# needed for `cargo readme`
path = "src/lib.rs"

[dependencies]
futures = "0.3.31"
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = { version = "2.0.110", features = ["full"] }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
