[package]
name = "for-streams"
version = "0.1.1"
authors = ["Jack O'Connor <oconnor663@gmail.com>"]
description = "like `select!` in a loop, but specifically for `Stream`s, with fewer footguns and several convenience features"
repository = "https://github.com/oconnor663/for_streams"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/for-streams"
readme = "README.md"
edition = "2024"

[lib]
proc-macro = true
# needed for `cargo readme`
path = "src/lib.rs"

[dependencies]
futures = "0.3.31"
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = { version = "2.0.110", features = ["full"] }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
